force-app/main/default/objects/RE_Archetype__c/RE_Archetype__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Archetype which is a collection of resources.</description>
    <label>Archetype</label>
    <nameField>
        <displayFormat>AID-{0000000000}</displayFormat>
        <label>Archetype ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archetypes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>