force-app/main/default/objects/RE_Archetype__c/fields/BannerImage__c.field-meta.xml
<CustomField>
    <fullName>BannerImage__c</fullName>
    <description>This field is use to set the Archetype banner image in Archetype Detail Screen.</description>
    <label>BannerImage</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>