force-app/main/default/objects/RE_Archetype__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is used to store description for Archetype.</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>