force-app/main/default/objects/RE_Archetype__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>This is used to order announcements and resource packages in landing page.</description>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>