force-app/main/default/objects/RE_Archetype__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>This is used to store an Image for Archetype.</description>
    <label>Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>