force-app/main/default/objects/RE_Archetype__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Used to store the languages supported by Archetype.</description>
    <label>Languages Supported</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>es_US</fullName>
                <label>Spanish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>