force-app/main/default/objects/RE_Archetype__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>This is used to store the links for carousel.</description>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>