force-app/main/default/objects/RE_Archetype__c/fields/ParentArchetype__c.field-meta.xml
<CustomField>
    <fullName>ParentArchetype__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to create relationship between sub Archetype to Parent Archetype.</description>
    <label>Parent Archetype</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RE_Archetype__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Archetype</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RE_Archetype__c</referenceTo>
    <relationshipLabel>Archetypes</relationshipLabel>
    <relationshipName>Archetype</relationshipName>
    <type>Lookup</type>
</CustomField>