force-app/main/default/objects/RE_Archetype__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>This is used to store the title of an Archetype.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>