force-app/main/default/objects/RE_Archetype__c/recordTypes/Announcement.recordType-meta.xml
<RecordType>
    <fullName>Announcement</fullName>
    <active>true</active>
    <description>This record type is used to create records to be shown in Carousel.</description>
    <label>Announcement</label>
</RecordType>