force-app/main/default/objects/RE_Archetype__c/recordTypes/Archetype.recordType-meta.xml
<RecordType>
    <fullName>Archetype</fullName>
    <active>true</active>
    <description>This record type is used to create Archetype records.</description>
    <label>Archetype</label>
</RecordType>