force-app/main/default/objects/RE_Archetype__c/recordTypes/SubArchetype.recordType-meta.xml
<RecordType>
    <fullName>SubArchetype</fullName>
    <active>true</active>
    <description>This record type is used to create Sub-Archetype records.</description>
    <label>Sub-Archetype</label>
</RecordType>