force-app/main/default/objects/RE_Archetype__c/listViews/Sub_Archetype.listView-meta.xml
<ListView>
    <fullName>Sub_Archetype</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Language__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Archetype__c.SubArchetype</value>
    </filters>
    <label>Sub Archetype</label>
</ListView>